--- a/src/views/landing-page1280px.css
+++ b/src/views/landing-page1280px.css
@@ -23,7 +23,7 @@
   padding: 10px;
   position: relative;
   align-self: stretch;
-  drop-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
+  box-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
   align-items: flex-start;
   flex-shrink: 0;
   justify-content: center;
@@ -33,7 +33,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 200px;
-  drop-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
+  box-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
   font-style: Black;
   text-align: center;
   font-family: "Poppins";
@@ -46,7 +46,7 @@
   gap: 10px;
   display: flex;
   padding: 10px;
-  drop-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
+  box-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
   align-self: stretch;
   align-items: flex-start;
   flex-shrink: 0;
@@ -57,7 +57,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 100px;
-  drop-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
+  box-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
   font-style: Black;
   text-align: center;
   font-family: Poppins;
@@ -82,7 +82,7 @@
   height: 300px;
   display: flex;
   padding: 10px;
-  drop-shadow: -10px -10px 0px 0px rgba(254, 219, 29, 1) ;
+  box-shadow: -10px -10px 0px 0px rgba(254, 219, 29, 1) ;
   align-items: center;
   flex-shrink: 0;
   border-radius: 500px;
@@ -119,7 +119,7 @@
   height: 300px;
   display: flex;
   padding: 10px;
-  drop-shadow: -10px -10px 0px 0px rgba(254, 219, 29, 1) ;
+  box-shadow: -10px -10px 0px 0px rgba(254, 219, 29, 1) ;
   align-items: center;
   flex-shrink: 0;
   border-radius: 500px;
@@ -164,7 +164,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 80px;
-  drop-shadow: 10px 10px 0px 10px rgba(0, 0, 0, 1) ;
+  box-shadow: 10px 10px 0px 10px rgba(0, 0, 0, 1) ;
   font-style: Black;
   text-align: center;
   font-family: Poppins;
@@ -196,7 +196,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 140px;
-  drop-shadow: rgb(254, 219, 29) -10px -10px 0px 0px;
+  box-shadow: rgb(254, 219, 29) -10px -10px 0px 0px;
   font-style: Black;
   text-align: center;
   font-family: "Poppins";
@@ -229,7 +229,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 32px;
-  drop-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 1) ;
+  box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 1) ;
   font-style: Black;
   text-align: left;
   font-family: Poppins;
@@ -244,7 +244,7 @@
   display: flex;
   overflow: hidden;
   position: relative;
-  drop-shadow: 10px 10px 0px 10px rgba(0, 0, 0, 1) ;
+  box-shadow: 10px 10px 0px 10px rgba(0, 0, 0, 1) ;
   align-items: flex-start;
   flex-shrink: 0;
   border-radius: 500px;
@@ -274,7 +274,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 140px;
-  drop-shadow: rgb(254, 219, 29) -10px -10px 0px 0px;
+  box-shadow: rgb(254, 219, 29) -10px -10px 0px 0px;
   font-style: Black;
   text-align: center;
   font-family: "Poppins";
@@ -300,7 +300,7 @@
   display: flex;
   overflow: hidden;
   position: relative;
-  drop-shadow: 10px 10px 0px 10px rgba(0, 0, 0, 1) ;
+  box-shadow: 10px 10px 0px 10px rgba(0, 0, 0, 1) ;
   align-items: flex-start;
   flex-shrink: 0;
   border-radius: 500px;
@@ -320,7 +320,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 32px;
-  drop-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 1) ;
+  box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 1) ;
   font-style: Black;
   text-align: left;
   font-family: Poppins;
@@ -352,7 +352,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 140px;
-  drop-shadow: rgb(254, 219, 29) -10px -10px 0px 0px;
+  box-shadow: rgb(254, 219, 29) -10px -10px 0px 0px;
   font-style: Black;
   text-align: center;
   font-family: "Poppins";
@@ -385,7 +385,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 32px;
-  drop-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 1) ;
+  box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 1) ;
   font-style: Black;
   text-align: left;
   font-family: Poppins;
@@ -400,7 +400,7 @@
   display: flex;
   overflow: hidden;
   position: relative;
-  drop-shadow: 10px 10px 0px 10px rgba(0, 0, 0, 1) ;
+  box-shadow: 10px 10px 0px 10px rgba(0, 0, 0, 1) ;
   align-items: flex-start;
   flex-shrink: 0;
   border-radius: 500px;
@@ -421,7 +421,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 80px;
-  drop-shadow: rgb(0, 0, 0) 10px 10px 0px 10px;
+  box-shadow: rgb(0, 0, 0) 10px 10px 0px 10px;
   font-style: Black;
   text-align: center;
   font-family: "Poppins";
@@ -455,7 +455,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 120px;
-  drop-shadow: rgb(0, 0, 0) 10px 10px 0px 10px;
+  box-shadow: rgb(0, 0, 0) 10px 10px 0px 10px;
   font-style: normal;
   text-align: center;
   font-family: "Poppins";
@@ -476,7 +476,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 120px;
-  drop-shadow: 10px 10px 0px 10px rgba(0, 0, 0, 1) ;
+  box-shadow: 10px 10px 0px 10px rgba(0, 0, 0, 1) ;
   font-style: normal;
   text-align: center;
   font-family: Poppins;
@@ -499,7 +499,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 120px;
-  drop-shadow: rgb(0, 0, 0) 10px 10px 0px 10px;
+  box-shadow: rgb(0, 0, 0) 10px 10px 0px 10px;
   font-style: normal;
   text-align: center;
   font-family: "Poppins";
@@ -520,7 +520,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 120px;
-  drop-shadow: rgb(0, 0, 0) 10px 10px 0px 10px;
+  box-shadow: rgb(0, 0, 0) 10px 10px 0px 10px;
   font-style: normal;
   text-align: center;
   font-family: "Poppins";
