--- a/src/views/landing-page1280px.css
+++ b/src/views/landing-page1280px.css
@@ -23,7 +23,7 @@
   padding: 10px;
   position: relative;
   align-self: stretch;
-  box-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
+  text-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
   align-items: flex-start;
   flex-shrink: 0;
   justify-content: center;
@@ -33,7 +33,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 200px;
-  box-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
+  text-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
   font-style: Black;
   text-align: center;
   font-family: "Poppins";
@@ -46,7 +46,7 @@
   gap: 10px;
   display: flex;
   padding: 10px;
-  box-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
+  text-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
   align-self: stretch;
   align-items: flex-start;
   flex-shrink: 0;
@@ -57,7 +57,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 100px;
-  box-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
+  text-shadow: rgb(254, 219, 29) -10px -10px 0px 0px, rgb(0, 0, 0) 10px 10px 0px 10px;
   font-style: Black;
   text-align: center;
   font-family: Poppins;
