--- a/src/views/landing-page1280px.css
+++ b/src/views/landing-page1280px.css
@@ -122,7 +122,6 @@
   height: 300px;
   display: flex;
   padding: 10px;
-  text-shadow: -10px -10px rgba(254, 219, 29, 1) ;
   align-items: center;
   flex-shrink: 0;
   border-radius: 500px;
@@ -148,7 +147,6 @@
   font-style: Black;
   text-align: center;
   font-family: Poppins;
-  text-shadow: -10px -10px rgb(254, 219, 29), 10px 10px black;
   font-weight: 900;
   line-height: 100%;
   font-stretch: normal;
@@ -168,7 +166,7 @@
   color: rgb(254, 219, 29);
   height: auto;
   flex-grow: 1;
-  text-shadow: -10px -10px rgb(254, 219, 29), 10px 10px black;
+  text-shadow: 10px 10px black;
   font-size: 80px;
   font-style: Black;
   text-align: center;
@@ -202,7 +200,7 @@
   height: auto;
   flex-grow: 1;
   font-size: 140px;
-  text-shadow: -10px -10px rgb(254, 219, 29);
+  text-shadow: -10px -10px rgb(254, 219, 29), 10px 10px black;
   font-style: Black;
   text-align: center;
   font-family: "Poppins";
@@ -621,7 +619,7 @@
   .landing-page1280px-text21 {
     color: rgb(240, 152, 198);
     font-size: 80px;
-    text-shadow: -10px -10px rgb(254, 219, 29);
+    text-shadow: -10px -10px rgb(254, 219, 29), 10px 10px black;
     font-family: Poppins;
     font-weight: 900;
     line-height: 100%;
@@ -643,7 +641,7 @@
   .landing-page1280px-text23 {
     color: rgb(240, 152, 198);
     font-size: 80px;
-    text-shadow: -10px -10px rgb(254, 219, 29);
+    text-shadow: -10px -10px rgb(254, 219, 29), 10px 10px black;
     font-family: Poppins;
     font-weight: 900;
     line-height: 100%;
